Context Menus small fixes (#5625)
* make small insert menu and full insert menu same width

* fix scrollbar color and separater width

* fix data picker scrollbar color

--- a/editor/resources/editor/css/ReactContexify.css
+++ b/editor/resources/editor/css/ReactContexify.css
@@ -58,6 +58,7 @@
 }
 .react-contexify__item__content {
   min-width: 190px;
+  width: 100%;
   padding-left: 8px;
   padding-right: 8px;
   display: flex;
